...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J3g-Rb-c0a" customClass="SAButton" customModule="RumeshChandima_cobsccomp182p_024">
                                <rect key="frame" x="30" y="702" width="354" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="wWu-YZ-nPY"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <state key="normal" title="LOGIN">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="btnLogin:" destination="3Mg-jq-BaR" eventType="touchUpInside" id="9f8-ut-WSr"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LrY-yB-G1y" customClass="SATextField" customModule="RumeshChandima_cobsccomp182p_024" customModuleProvide
                                <rect key="frame" x="30" y="612" width="354" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="vtT-pO-gef"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yr1-lG-7wf" customClass="SATextField" customModule="RumeshChandima_cobsccomp182p_024" customModuleProvider="
                                <rect key="frame" x="30" y="552" width="354" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="Vym-rW-Puv"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
