...
                attendeesList.append(Auth.auth().currentUser!.uid)
                
                updatedEvent.goingUsers = attendeesList
                
                eventDoc.updateData(["goingUsers":attendeesList]){ err in
                    if let err = err {
                        //Alerts.showAlert(title: "Error", message: "Error uploading data: \(err.localizedDescription)", presentingVC: viewController)
                        print(err.localizedDescription)
                        completion(false)
                        return
                    }
                    
                    
...
extension Auth {
    
    //error handling with firebase and view a alert box
    func handleFireAuthError(error: Error, viewController : UIViewController){
        if let errorCode = AuthErrorCode(rawValue: error._code) {
            let alert = UIAlertController(title: "Error", message: errorCode.errorMessage, preferredStyle: .alert)
            let okAction = UIAlertAction(title: "Ok", style: .default, handler: nil)
            alert.addAction(okAction)
            viewController.present(alert,animated: true,completion: nil)
        }
    }
}

...
